update viewMapper for controller and changed the return type for endpoints
