# notes/App/Note.API/Controllers/NoteController.cs
@@ -57,17 +57,17 @@ namespace Note.API.Controllers
         }
 
         [HttpPost]
-        public async Task<ActionResult> AddNote(CreateNoteDto note) 
+        public async Task<ActionResult<DoneResult>> AddNote(CreateNoteDto note) 
         {
             var query = _mapper.Map<CreateNoteCommand>(note);
 
             var data = await _mediator.Send(query);
 
-            return _viewMapper.ShowResult(data);
+            return _viewMapper.ShowResult<DoneResult>(data);
         }
 
         [HttpPatch("{id}")]
-        public async Task<ActionResult> Patch(ulong id, UpdateNoteDto note)
+        public async Task<ActionResult<DoneResult>> Patch(ulong id, UpdateNoteDto note)
         {
             
             var query = _mapper.Map<UpdateNoteCommand>(note);
@@ -76,11 +76,11 @@ namespace Note.API.Controllers
 
             var data = await _mediator.Send(query);
 
-            return _viewMapper.ShowResult(data);
+            return _viewMapper.ShowResult<DoneResult>(data);
         }
 
         [HttpDelete("{id}")]
-        public async Task<ActionResult> Delete(ulong id) 
+        public async Task<ActionResult<DoneResult>> Delete(ulong id) 
         {
             var query = new DeleteNoteCommand()
             {
@@ -89,7 +89,7 @@ namespace Note.API.Controllers
 
             var data = await _mediator.Send(query);
 
-            return _viewMapper.ShowResult(data);
+            return _viewMapper.ShowResult<DoneResult>(data);
         }
     }
 }
